# anchor-whisper

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  overlay.html  styles.css
src-tauri/: .tauri-private-key.pub  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
