[package]
name = "anchor-whisper"
version = "0.1.3"
description = "Voice-to-text with AI formatting"
authors = ["you"]
edition = "2021"

[lib]
name = "anchor_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
arboard = "3"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1"
base64 = "0.22"
regex = "1"
